Fixed letter spacing on app, and some other styling

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -36,6 +36,7 @@ h3 {
     font-family: 'FredokaOne';
     font-size: 4rem;
     display: inline;
+    letter-spacing: 2px;
 }
 
 
@@ -371,12 +372,13 @@ button {
 
     .title {
         margin: 1rem 0 .5rem 0;
-        font-size: 6rem;
+        font-size: 6.5rem;
     }
 
     h3 {
-        font-size: 2rem;
+        font-size: 2.3rem;
         margin: 1rem 0 0 0;
+        letter-spacing: 1.5px;
     }
 
     .startbtn {
